fix: breadcrumb gap spacing

--- a/packages/components/_provisional/src/breadcrumbs/styles/index.module.scss
+++ b/packages/components/_provisional/src/breadcrumbs/styles/index.module.scss
@@ -2,6 +2,6 @@
 
 .root {
   display: flex;
-  gap: get-spacing(1);
+  gap: get-spacing(0.5);
   align-items: center;
 }
